# internal/scanning/model/request_model.go
@@ -1,0 +1,7 @@
+package model
+
+// ScanningRequest Model
+
+type ScanningRequest struct {
+	QRCodePayload string `json:"qr_code_payload" validate:"required"`
+}
