# internal/scanning/model/response_model.go
@@ -1,0 +1,8 @@
+package model
+
+// ScanningResponse Model
+
+type ScanningResponse struct {
+	Valid   bool   `json:"valid"`
+	Message string `json:"message,omitempty"`
+}
